# cfdtools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/blayer/: CMakeLists.txt  README  extract_blayer_data.f90
app/capsule_grid/: CMakeLists.txt  NosePatch61B.p3da  README  capsule.sh  capsule_grid.f90  capsule_grid.inp  hypgen.doc
app/cross_sections/: CMakeLists.txt  README
app/deconstruct/: CMakeLists.txt  README  deconstruct.f90  unique_xyz_list.f90
app/profile/: CMakeLists.txt  profile.f
app/shadowgraph/: CMakeLists.txt  FieldView_Data.f90  README  VTK_Data.f90  flow_gradients.f90  grid_block_structure.f90  process_hex_cell.f90  process_prism.f90  process_tet_cell.f90  read_fieldview.f90  test_process_pyramid.f90  test_process_tet_cell.f90  triangulate_quad_face.f90
app/stardust_lines/: CMakeLists.txt  README  Stardust_Integration.f90  Stardust_Lines.f90  point_source.f90
app/surface_interp/: CMakeLists.txt  README  surface_interp.f90
app/uslos/: CMakeLists.txt  README  uslos.f90
lib/aa_nurbs/: CMakeLists.txt  README  bsaf2xy.f  bsafgeom.f  bsafnorm.f  bsafy4x.f  bsarcmap.f  bsarea.f  bscrvmod.f  bscrvrd.f  bseval.f  bsfit.f  bsinsert.f  bszeromn.f  conarea.f  dtlsa.f  dtradc.f  dtrdwr.f  dtsepp.f  lsknots.f
lib/dt_nurbs/: CMakeLists.txt  README  d0acs.f  d0ahdr.f  d0bffp.f  d0cdmp.f  d0cqnf.f  d0dmbf.f  d0dmcq.f  d0dmeg.f  d0dmge.f  d0dmgi.f  d0dmjs.f  d0dmlp.f  d0dmpc.f  d0dmpj.f  d0dmts.f  d0egfp.f  d0eras.f  d0fits.f  d0g141.f  d0g143.f  d0gble.f  d0geer.f  d0icpy.f  d0idmp.f  d0igdo.f  d0igfd.f  d0ignd.f  d0igre.f  d0igrp.f  d0igwp.f  d0iptr.f  d0jsfp.f  d0labl.f  d0lbig.f  d0lpfp.f  d0lplt.f  d0mchk.f  d0npm1.f  (+327 more)
lib/geomlib/: CMakeLists.txt  README  angle2d.f90  angle_between_planes.f90  angle_between_vectors.f90  arcs2d.f  arcs2d.f.reentered-but-replaced-by-Todd-copy  arcs3d.f  area3.f  area4.f  areaxy.f  beval.f  catenary_parameters.f90  chord.f  chord3d.f  chords2d.f  chords3d.f  chordsrf.f  chordsrow.f  circle_slope.f90  cross.f  cross_product.f90  curv2d.f  curv3d.f  curve_diffs.f90  detect_flatness.f90  detect_vertices.f90  distptol.f  distptop.f  distptos.f  gaussian_curvature.f90  handle_flatness.f90  hex_vol.f90  hex_volume.f90  nearest_brick_point.f90  nearest_cell_point.f90  nearest_curve_point.f90  nearest_edge_point.f90  nearest_edge_pt_2d.f90  nearest_hex_point.f90  (+33 more)
lib/grid_block_utilities/: CMakeLists.txt  README  grid_block_structure.f90  grid_block_utilities.f90  test_block_utilities.f90
lib/gridlib/: CMakeLists.txt  README  adjustn.f90  adjustn2.f90  arbdis.f  arcdis.f  average_increments.f90  blgrid.f  catenary_grid.f90  cellvol.f  changen.f  changen1d.f  changen1d.f90  changen2d.f  compass.f  condis.f  copy_face.f90  curvdis.f  curvdis.f.before-flatness-option  curvdis.f.before-growth-rate-smoothing  curvdis.f.before-linear-option  curvdis.f.before-vertex-handling  curvdis.f.too_much_smoothing  curvdis.f90  curvdis2.f90  curvdis2.f90.before-retry-loop  curvdis3d.f  curvdis3d.f.before-refinements  curvdis3d2.f90  curvdis_behavior.f90  curvdis_l.f  delq3d.f  determine_grid_dim.f90  determine_grid_form.f90  distrib.f  dstrib.f  ecompass.f  ellip2d.f  ellip3d.f  ellipq3d.f  (+47 more)
lib/grmodules/: CMakeLists.txt  annotate.f  classif.f  clipit.f  clpwnd.f  clrnge.f  conscl.f  cont2d.f  cont3d.f  contleg.f  fixwindo.f  layout.f  lbtext.f  legend.f  linax.f  logax.f  mapfix.f  pl2d.f  pl3d.f  plcleg.f  plfree.f  plgrid.f  pllevs.f  plotdev.f  plpoly.f  pltgeo.f  pltytl.f  poly3d.f  polyline.f  qcont.f  sclean.f  testclean.f  window.f  xdimtb.f
lib/integrate/: CMakeLists.txt  README  fsquad.f  integrate.f  integrate.f.previous  lcsareas.f  lcsquad.f  sctrpz.f  trapezoidal_quadrature_2d.f
lib/integrate1d/: CMakeLists.txt  avint.f  csquad.f  msquad.f  quanc8rc.f
lib/integratelib/: CMakeLists.txt  test_2d.f90  trapezoidal_quadrature_3d.f90
lib/interp2d/: CMakeLists.txt  README  akima.f  bicubmat.f  bilin3pt.f.superseded-by-ADT  bilinear.f  bilint.f  bilintp.f  bvlsq.f  facets.f  hardy.f  inmesh.f  intsec.f.deprecated  intsec2.f  intsec2d.f90  intsec2t.f  intsec3.f  lcsfit2d.f  lcsint2d.f  lint2d.f  nearpt.f  pbilint.f  pbvlsq.f  plbicube.f  plincub.f  plsint2d.f  plstangent.f  plxcut.f  smooth2d.f  table2.f  tfif2d.f  tpspln.f
lib/interp3d/: CMakeLists.txt  README  bilincut.f  furthest_point.f90  furthest_point.f90.before-ADT-merge  inside_outside.f90  intsec4.f  intsec5.f  intsec6.f90  intsec6.f90.before-ADT-merge  intsec6_2pt.f90  intsec7.f90.before-ADT-merge_use_intsec6_now  intsec8.f90  intsec8.f90.before-ADT-merge  intsec9.f90  lcsint3d.f  line_surface.f90  peval3.f  pfit3.f  plbicut.f  pleval.f  plfit.f  plscrv3d.f  plscurve.f  plsfit3d.f  plsintyz.f  plxcut3d.f90  smoothxyz.f  table3.f  tri_line.f90  trilint.f  usintsec.f90  wbintr.f
lib/interplib/: CMakeLists.txt  README  aebxplusc.f90  axbecx.f90  axbplusc.f90  cfft.f  cfft2.f  circular_arc.f90  csdval.f  cseval.f  csfit.f  cspline.f90  cubintrp.f  fscalc.f  fscoef.f  fsdval.f  fseries.f  fseval.f  fseval2.f  fsfit.f  fssum.f  hermite.f  inverse_parabola.f  lcsfit.f  lcsfit2.f90  lcsinverse.f90  legendre.f90  line1d.f  lint1d.f  lintrp.f  lsfit1.f  lsfit2.f  msfit.f  nonlinear_interpolation.f.not_for_library  peval2.f  pfit2.f  plsfit.f  plsintrp.f  pndval.f  pneval.f  (+25 more)
lib/lewis/: CMakeLists.txt  chemprops.spec  compile.c  compile.f90  equilibrium_composition.f90  equilibrium_gas.c  grant.c  lewis.c  lewis.h  test_interface.f90  traj.h  var.h
lib/linsys/: CMakeLists.txt  README  bloktr.f  btr4.f  cholesky.f  cholesky_factorization.f  cholesky_solution.f  chsolve.f  colslv.f  decbt.f  decbtc.f  decomp.f.FORTRAN_66  decomp.f90  decslv.f  dtdlsq.f  hdecom.f  hdesol.f  hdesolw.f  hsolve.f  hsulve.f  lsqr.f  lusolve.f.FORTRAN_77  lusolve.f90  qrdiag.f  safeguarded_lsqr.f90  solbt.f  solbtc.f  solve.f.FORTRAN_66  solve.f90  symevd.f90  symevdsolve.f90  symmlq.f  trdiag.f  tricps.f  trid2r.f  trid3r.f  trip.f
lib/numodules/: CMakeLists.txt  README  addnoise.f90  bessel.f  bounds.f  brodlie.f  butland.f  circ_shift.f  copy.f  d4coefs.f  deriv3.f  derivs_123.f90  sumx.f  (+28 more)
(+997 files in other folders)
