#------------------------------------------------------------------------------
# Preamble
#------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.3)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

set(CFDTOOLS_VERSION_MAJOR  15)
set(CFDTOOLS_VERSION_MINOR  1)
set(CFDTOOLS_VERSION_PATCH  0)
set(CFDTOOLS_VERSION "${CFDTOOLS_VERSION_MAJOR}.${CFDTOOLS_VERSION_MINOR}.${CFDTOOLS_VERSION_PATCH}")

project(cfdtools
    VERSION ${CFDTOOLS_VERSION}
    LANGUAGES Fortran C)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
include(GNUInstallDirs)


#------------------------------------------------------------------------------
# Global Defaults
#------------------------------------------------------------------------------
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install"
        CACHE PATH "DPLR installation directory"
        FORCE)
endif()

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    message(STATUS "Setting build type to 'Release' since none specified.")
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
        "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()

option(CFDTOOLS_TEST "Build/enable unit tests for CFDTOOLS" ON)
if(CFDTOOLS_TEST)
    enable_testing()
endif()

include(compile_options) # After set CMAKE_BUILD_TYPE
add_library(global INTERFACE)
target_compile_options(global INTERFACE ${CFDTOOLS_COMPILE_OPTIONS})


#------------------------------------------------------------------------------
# Supporting File Installation
#------------------------------------------------------------------------------
configure_file(cmake/modulefile.in modulefile)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/modulefile DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY samples DESTINATION ${CMAKE_INSTALL_PREFIX})


#------------------------------------------------------------------------------
# Include Project Subdirectories
#------------------------------------------------------------------------------
add_subdirectory(lib/aa_nurbs)
add_subdirectory(lib/adt)
add_subdirectory(lib/blas2lib)
add_subdirectory(lib/blaslib)
add_subdirectory(lib/dt_nurbs)
add_subdirectory(lib/eigenlib)
add_subdirectory(lib/forsythe)
add_subdirectory(lib/geomlib)
add_subdirectory(lib/grid_block_structure)
add_subdirectory(lib/grid_block_utilities)
add_subdirectory(lib/gridlib)
add_subdirectory(lib/grmodules)
add_subdirectory(lib/integratelib)
add_subdirectory(lib/interp2d)
add_subdirectory(lib/interp3d)
add_subdirectory(lib/interplib)
add_subdirectory(lib/intrinsics)
add_subdirectory(lib/kdtree)
add_subdirectory(lib/lewis)
add_subdirectory(lib/linsys)
add_subdirectory(lib/numodules)
add_subdirectory(lib/obsolete)
add_subdirectory(lib/optinterp)
add_subdirectory(lib/optlib)
add_subdirectory(lib/progtools)
add_subdirectory(lib/searchlib)
add_subdirectory(lib/special_functions)
add_subdirectory(lib/surface_patch_utilities)
add_subdirectory(lib/table_io)
add_subdirectory(lib/tecplot_gridlib)
add_subdirectory(lib/tecplot_adt)
add_subdirectory(lib/tecplot_io)
add_subdirectory(lib/tecplot_surface_patch_utilities)
add_subdirectory(lib/tecplot_xyzq_io)
add_subdirectory(lib/tile_triangulation)
add_subdirectory(lib/triangulation_io)
add_subdirectory(lib/ugridlib)
add_subdirectory(lib/xyzq_io)

add_subdirectory(prog/a2b)
add_subdirectory(prog/aero_coefs)
add_subdirectory(prog/adjust_flow)
add_subdirectory(prog/adjust_grid)
add_subdirectory(prog/aerosurf)
add_subdirectory(prog/anchor)
add_subdirectory(prog/blayer)
add_subdirectory(prog/blayer_results)
add_subdirectory(prog/bsprofile)
add_subdirectory(prog/bump_factors)
add_subdirectory(prog/capsule_grid)
add_subdirectory(prog/capsule_spokes)
add_subdirectory(prog/cavity_map)
add_subdirectory(prog/cfd_conditions)
add_subdirectory(prog/cgrid)
add_subdirectory(prog/ch_grid)
add_subdirectory(prog/check_boundary)
add_subdirectory(prog/columnedit)
add_subdirectory(prog/combine)
add_subdirectory(prog/combine_blocks)
add_subdirectory(prog/combine_blocks_turb)
add_subdirectory(prog/combine_tables)
add_subdirectory(prog/compare_blocks)
add_subdirectory(prog/compare_flows)
add_subdirectory(prog/compare_patches)
add_subdirectory(prog/compress2d)
add_subdirectory(prog/cones_of_sight)
add_subdirectory(prog/convertq)
add_subdirectory(prog/convex_grid)
add_subdirectory(prog/cross_sections)
add_subdirectory(prog/curvature)
add_subdirectory(prog/curvature3d)
add_subdirectory(prog/deconstruct)
add_subdirectory(prog/distribute)
add_subdirectory(prog/dt2iges)
add_subdirectory(prog/ensemble)
add_subdirectory(prog/extract_blocks)
add_subdirectory(prog/extract_blocks_2d)
add_subdirectory(prog/extract_columns)
add_subdirectory(prog/extract_functions)
add_subdirectory(prog/extract_lines)
add_subdirectory(prog/extract_peaks)
add_subdirectory(prog/filter_lines)
add_subdirectory(prog/filter_rows)
add_subdirectory(prog/fix_filler)
add_subdirectory(prog/fix_grid)
add_subdirectory(prog/flow_interp)
add_subdirectory(prog/flow_interp_2d)
add_subdirectory(prog/forebody_regrid)
add_subdirectory(prog/fourdigit)
add_subdirectory(prog/free_stream_conditions)
add_subdirectory(prog/gen1d)
#add_subdirectory(prog/gestimate) tgas1?
add_subdirectory(prog/gradient_based)
add_subdirectory(prog/grid_faces)
add_subdirectory(prog/grid_morph_1)
add_subdirectory(prog/gsmooth)
add_subdirectory(prog/gu)
add_subdirectory(prog/hb_grid)
#add_subdirectory(prog/heat_shield) npopt?
add_subdirectory(prog/hemispheres_of_sight)
add_subdirectory(prog/hyper_aero)
add_subdirectory(prog/iblank_move)
add_subdirectory(prog/inertial_and_relative)
add_subdirectory(prog/insert_lines)
add_subdirectory(prog/insert_z)
add_subdirectory(prog/integrate)
add_subdirectory(prog/interp_1d)
add_subdirectory(prog/interp_columns)
add_subdirectory(prog/join_grid)
add_subdirectory(prog/line_grid)
add_subdirectory(prog/lines_of_sight)
add_subdirectory(prog/lines_of_sight_2d)
add_subdirectory(prog/loc)
add_subdirectory(prog/makelist)
add_subdirectory(prog/maxmin)
add_subdirectory(prog/merge_blocks)
add_subdirectory(prog/merge_files)
add_subdirectory(prog/merge_tables)
add_subdirectory(prog/merge_zones)
add_subdirectory(prog/mesh_warp)
add_subdirectory(prog/mpfa)
add_subdirectory(prog/multicut)
add_subdirectory(prog/multiplot)
add_subdirectory(prog/nbyn)
add_subdirectory(prog/neqair_data)
add_subdirectory(prog/neqair_integration)
#add_subdirectory(prog/nose_radius) snopt?
add_subdirectory(prog/nozzle_throat_conditions)
#add_subdirectory(prog/npopt_driver) npopt?
add_subdirectory(prog/outbound)
add_subdirectory(prog/p3d2tec)
add_subdirectory(prog/peaker)
add_subdirectory(prog/plug_interp)
add_subdirectory(prog/polar_interp)
add_subdirectory(prog/precision)
add_subdirectory(prog/prepare_fiat_data)
add_subdirectory(prog/prepare_local_analysis)
add_subdirectory(prog/prepare_neqair_data)
add_subdirectory(prog/profile)
add_subdirectory(prog/project_to_sphere)
#add_subdirectory(prog/qplot) x11?
add_subdirectory(prog/radial_interp)
add_subdirectory(prog/radial_interp_2d)
add_subdirectory(prog/recenter_grid)
add_subdirectory(prog/rectify_grid)
add_subdirectory(prog/refine_grid)
add_subdirectory(prog/reflect_blocks)
add_subdirectory(prog/reflect_blocks_2d)
add_subdirectory(prog/regrid1)
add_subdirectory(prog/regularize)
add_subdirectory(prog/reorder_blocks)
add_subdirectory(prog/reorder_rows)
add_subdirectory(prog/reorder_segments)
add_subdirectory(prog/reshape)
add_subdirectory(prog/reshape3d)
add_subdirectory(prog/revolve_grid)
add_subdirectory(prog/running_statistics)
add_subdirectory(prog/runtime_control)
add_subdirectory(prog/sage)
add_subdirectory(prog/scale_grid)
add_subdirectory(prog/scan_grid)
add_subdirectory(prog/shadowgraph)
add_subdirectory(prog/shiftscale)
add_subdirectory(prog/shock_stand_off)
add_subdirectory(prog/sixseries)
add_subdirectory(prog/slos)
add_subdirectory(prog/smooth)
add_subdirectory(prog/smooth2d)
add_subdirectory(prog/sort_rows)
add_subdirectory(prog/sort_surface_slice)
add_subdirectory(prog/sorter)
add_subdirectory(prog/split_grid)
add_subdirectory(prog/superellipse)
add_subdirectory(prog/surface_curvature)
add_subdirectory(prog/surface_cuts)
add_subdirectory(prog/surface_diffs)
add_subdirectory(prog/surface_interp)
add_subdirectory(prog/surface_interp_2d)
add_subdirectory(prog/surface_pad)
add_subdirectory(prog/surface_patches)
add_subdirectory(prog/surface_peaks)
add_subdirectory(prog/surface_project)
add_subdirectory(prog/surface_quadrature)
add_subdirectory(prog/surface_uvs)
add_subdirectory(prog/table_arithmetic)
add_subdirectory(prog/template)
add_subdirectory(prog/tet_interp)
add_subdirectory(prog/thin_flow)
add_subdirectory(prog/thin_grid)
add_subdirectory(prog/thin_grid_2d)
add_subdirectory(prog/throat_conditions_3d)
add_subdirectory(prog/trail)
#add_subdirectory(prog/traj_opt)  traj?
add_subdirectory(prog/tri_to_quad)
add_subdirectory(prog/tri_to_tri)
add_subdirectory(prog/triangulation_tool)
add_subdirectory(prog/tri_diffs)
add_subdirectory(prog/update_grid)
add_subdirectory(prog/upsequence)
add_subdirectory(prog/uslos)
add_subdirectory(prog/v2c)
add_subdirectory(prog/wingsections)
add_subdirectory(prog/xdeck)
add_subdirectory(prog/xline)
add_subdirectory(prog/zb_fix)
