#------------------------------------------------------------------------------
# Preamble
#------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.3)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

project(cfdtools
    VERSION 15.1.0
    LANGUAGES Fortran C)

include(CMakeDependentOption)
include(GNUInstallDirs)


#------------------------------------------------------------------------------
# Standalone Project Configuration
#------------------------------------------------------------------------------
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)

    if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
        set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install"
            CACHE PATH "DPLR installation directory"
            FORCE)
        message(STATUS "Setting install prefix to ${CMAKE_INSTALL_PREFIX} since none specified.")
    endif()

    if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
        set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
        set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
            "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
        message(STATUS "Setting build type to 'Release' since none specified.")
    endif()

    include(CTest)

endif()


#------------------------------------------------------------------------------
# Baseline Project Configuration
#------------------------------------------------------------------------------
cmake_dependent_option(CFDTOOLS_BUILD_TESTING
    "Build/enable unit tests for CFDTOOLS" ON
    "BUILD_TESTING" OFF)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
include(cfdtools_compile_options) # After set CMAKE_BUILD_TYPE
include(cfdtools_helpers)
target_compile_options(cfdtools_global INTERFACE ${CFDTOOLS_COMPILE_OPTIONS})


#------------------------------------------------------------------------------
# Component Subdirectories
#------------------------------------------------------------------------------
add_subdirectory(lib/aa_nurbs)
add_subdirectory(lib/adt)
add_subdirectory(lib/blas2lib)
add_subdirectory(lib/blaslib)
add_subdirectory(lib/dt_nurbs)
add_subdirectory(lib/eigenlib)
add_subdirectory(lib/forsythe)
add_subdirectory(lib/geomlib)
add_subdirectory(lib/grid_block_structure)
add_subdirectory(lib/grid_block_utilities)
add_subdirectory(lib/gridlib)
add_subdirectory(lib/grmodules)
add_subdirectory(lib/integratelib)
add_subdirectory(lib/interp2d)
add_subdirectory(lib/interp3d)
add_subdirectory(lib/interplib)
add_subdirectory(lib/intrinsics)
add_subdirectory(lib/kdtree)
add_subdirectory(lib/lewis)
add_subdirectory(lib/linsys)
add_subdirectory(lib/numodules)
add_subdirectory(lib/obsolete)
add_subdirectory(lib/optinterp)
add_subdirectory(lib/optlib)
add_subdirectory(lib/progtools)
add_subdirectory(lib/searchlib)
add_subdirectory(lib/special_functions)
add_subdirectory(lib/surface_patch_utilities)
add_subdirectory(lib/table_io)
add_subdirectory(lib/tecplot_gridlib)
add_subdirectory(lib/tecplot_adt)
add_subdirectory(lib/tecplot_io)
add_subdirectory(lib/tecplot_surface_patch_utilities)
add_subdirectory(lib/tecplot_xyzq_io)
add_subdirectory(lib/tile_triangulation)
add_subdirectory(lib/triangulation_io)
add_subdirectory(lib/ugridlib)
add_subdirectory(lib/xyzq_io)

add_subdirectory(app/a2b)
add_subdirectory(app/aero_coefs)
add_subdirectory(app/adjust_flow)
add_subdirectory(app/adjust_grid)
add_subdirectory(app/aerosurf)
add_subdirectory(app/anchor)
add_subdirectory(app/blayer)
add_subdirectory(app/blayer_results)
add_subdirectory(app/bsprofile)
add_subdirectory(app/bump_factors)
add_subdirectory(app/capsule_grid)
add_subdirectory(app/capsule_spokes)
add_subdirectory(app/cavity_map)
add_subdirectory(app/cfd_conditions)
add_subdirectory(app/cgrid)
add_subdirectory(app/ch_grid)
add_subdirectory(app/check_boundary)
add_subdirectory(app/columnedit)
add_subdirectory(app/combine)
add_subdirectory(app/combine_blocks)
add_subdirectory(app/combine_blocks_turb)
add_subdirectory(app/combine_tables)
add_subdirectory(app/compare_blocks)
add_subdirectory(app/compare_flows)
add_subdirectory(app/compare_patches)
add_subdirectory(app/compress2d)
add_subdirectory(app/cones_of_sight)
add_subdirectory(app/convertq)
add_subdirectory(app/convex_grid)
add_subdirectory(app/cross_sections)
add_subdirectory(app/curvature)
add_subdirectory(app/curvature3d)
add_subdirectory(app/deconstruct)
add_subdirectory(app/distribute)
add_subdirectory(app/dt2iges)
add_subdirectory(app/ensemble)
add_subdirectory(app/extract_blocks)
add_subdirectory(app/extract_blocks_2d)
add_subdirectory(app/extract_columns)
add_subdirectory(app/extract_functions)
add_subdirectory(app/extract_lines)
add_subdirectory(app/extract_peaks)
add_subdirectory(app/filter_lines)
add_subdirectory(app/filter_rows)
add_subdirectory(app/fix_filler)
add_subdirectory(app/fix_grid)
add_subdirectory(app/flow_interp)
add_subdirectory(app/flow_interp_2d)
add_subdirectory(app/forebody_regrid)
add_subdirectory(app/fourdigit)
add_subdirectory(app/free_stream_conditions)
add_subdirectory(app/gen1d)
#add_subdirectory(app/gestimate) tgas1?
add_subdirectory(app/gradient_based)
add_subdirectory(app/grid_faces)
add_subdirectory(app/grid_morph_1)
add_subdirectory(app/gsmooth)
add_subdirectory(app/gu)
add_subdirectory(app/hb_grid)
#add_subdirectory(app/heat_shield) npopt?
add_subdirectory(app/hemispheres_of_sight)
add_subdirectory(app/hyper_aero)
add_subdirectory(app/iblank_move)
add_subdirectory(app/inertial_and_relative)
add_subdirectory(app/insert_lines)
add_subdirectory(app/insert_z)
add_subdirectory(app/integrate)
add_subdirectory(app/interp_1d)
add_subdirectory(app/interp_columns)
add_subdirectory(app/join_grid)
add_subdirectory(app/line_grid)
add_subdirectory(app/lines_of_sight)
add_subdirectory(app/lines_of_sight_2d)
add_subdirectory(app/loc)
add_subdirectory(app/makelist)
add_subdirectory(app/maxmin)
add_subdirectory(app/merge_blocks)
add_subdirectory(app/merge_files)
add_subdirectory(app/merge_tables)
add_subdirectory(app/merge_zones)
add_subdirectory(app/mesh_warp)
add_subdirectory(app/mpfa)
add_subdirectory(app/multicut)
add_subdirectory(app/multiplot)
add_subdirectory(app/nbyn)
add_subdirectory(app/neqair_data)
add_subdirectory(app/neqair_integration)
#add_subdirectory(app/nose_radius) snopt?
add_subdirectory(app/nozzle_throat_conditions)
#add_subdirectory(app/npopt_driver) npopt?
add_subdirectory(app/outbound)
add_subdirectory(app/p3d2tec)
add_subdirectory(app/peaker)
add_subdirectory(app/plug_interp)
add_subdirectory(app/polar_interp)
add_subdirectory(app/precision)
add_subdirectory(app/prepare_fiat_data)
add_subdirectory(app/prepare_local_analysis)
add_subdirectory(app/prepare_neqair_data)
add_subdirectory(app/profile)
add_subdirectory(app/project_to_sphere)
#add_subdirectory(app/qplot) x11?
add_subdirectory(app/radial_interp)
add_subdirectory(app/radial_interp_2d)
add_subdirectory(app/recenter_grid)
add_subdirectory(app/rectify_grid)
add_subdirectory(app/redistribute_xy)
add_subdirectory(app/refine_grid)
add_subdirectory(app/reflect_blocks)
add_subdirectory(app/reflect_blocks_2d)
add_subdirectory(app/regrid1)
add_subdirectory(app/regularize)
add_subdirectory(app/reorder_blocks)
add_subdirectory(app/reorder_rows)
add_subdirectory(app/reorder_segments)
add_subdirectory(app/reshape)
add_subdirectory(app/reshape3d)
add_subdirectory(app/revolve_grid)
add_subdirectory(app/running_statistics)
add_subdirectory(app/runtime_control)
add_subdirectory(app/sage)
add_subdirectory(app/scale_grid)
add_subdirectory(app/scan_grid)
add_subdirectory(app/shadowgraph)
add_subdirectory(app/shiftscale)
add_subdirectory(app/shock_stand_off)
add_subdirectory(app/sixseries)
add_subdirectory(app/slos)
add_subdirectory(app/smooth)
add_subdirectory(app/smooth2d)
add_subdirectory(app/sort_rows)
add_subdirectory(app/sort_surface_slice)
add_subdirectory(app/sorter)
add_subdirectory(app/split_grid)
add_subdirectory(app/stardust_lines)
add_subdirectory(app/superellipse)
add_subdirectory(app/surface_curvature)
add_subdirectory(app/surface_cuts)
add_subdirectory(app/surface_diffs)
add_subdirectory(app/surface_interp)
add_subdirectory(app/surface_interp_2d)
add_subdirectory(app/surface_pad)
add_subdirectory(app/surface_patches)
add_subdirectory(app/surface_peaks)
add_subdirectory(app/surface_project)
add_subdirectory(app/surface_quadrature)
add_subdirectory(app/surface_uvs)
add_subdirectory(app/table_arithmetic)
add_subdirectory(app/template)
add_subdirectory(app/tet_interp)
add_subdirectory(app/thin_flow)
add_subdirectory(app/thin_grid)
add_subdirectory(app/thin_grid_2d)
add_subdirectory(app/throat_conditions_3d)
add_subdirectory(app/trail)
#add_subdirectory(app/traj_opt)  traj?
add_subdirectory(app/tri_to_quad)
add_subdirectory(app/tri_to_tri)
add_subdirectory(app/triangulation_tool)
add_subdirectory(app/tri_diffs)
add_subdirectory(app/update_grid)
add_subdirectory(app/upsequence)
add_subdirectory(app/uslos)
add_subdirectory(app/v2c)
add_subdirectory(app/wingsections)
add_subdirectory(app/xdeck)
add_subdirectory(app/xline)
add_subdirectory(app/zb_fix)


#------------------------------------------------------------------------------
# Installation
#------------------------------------------------------------------------------
configure_file(cmake/modulefile.in modulefile)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/modulefile
    DESTINATION ${CMAKE_INSTALL_DATADIR}/cfdtools/modulefiles/
    RENAME cfdtools)
install(DIRECTORY samples
    DESTINATION ${CMAKE_INSTALL_DATADIR}/cfdtools)
install(EXPORT cfdtools-config
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/cfdtools
    NAMESPACE cfdtools::
    FILE cfdtoos-config.cmake
)

