cfdtools_add_executable(deconstruct
  deconstruct.f90
  unique_xyz_list.f90
)
target_link_libraries(cfdtools_deconstruct
  cfdtools_xyzq_io
  cfdtools_string_justify
  cfdtools_triangulation_io
  cfdtools_gridlib
  cfdtools_ugridlib
  cfdtools_geomlib
  cfdtools_linsys
  cfdtools_progtools
  cfdtools_eigenlib
)
