add_library(dt_nurbs
  d0acs.f
  d0ahdr.f
  d0bffp.f
  d0cdmp.f
  d0cqnf.f
  d0dmbf.f
  d0dmcq.f
  d0dmeg.f
  d0dmge.f
  d0dmgi.f
  d0dmjs.f
  d0dmlp.f
  d0dmpc.f
  d0dmpj.f
  d0dmts.f
  d0egfp.f
  d0eras.f
  d0fits.f
  d0g141.f
  d0g143.f
  d0gble.f
  d0geer.f
  d0icpy.f
  d0idmp.f
  d0igdo.f
  d0igfd.f
  d0ignd.f
  d0igre.f
  d0igrp.f
  d0igwp.f
  d0iptr.f
  d0jsfp.f
  d0labl.f
  d0lbig.f
  d0lpfp.f
  d0lplt.f
  d0mchk.f
  d0npm1.f
  d0npms.f
  d0nxde.f
  d0pit1.f
  d0pit2.f
  d0pitg.f
  d0pjfp.f
  d0pji1.f
  d0pji2.f
  d0pr2x.f
  d0prmi.f
  d0prmx.f
  d0ptr.f
  d0sint.f
  d0ss10.f
  d0ss11.f
  d0ss12.f
  d0ssx2.f
  d0ssx3.f
  d0ssx4.f
  d0ssx5.f
  d0ssx6.f
  d0ssx7.f
  d0ssx8.f
  d0ssx9.f
  d0tbu1.f
  d0trmc.f
  d0tsfp.f
  d0unlk.f
  d0xcpy.f
  d1cqdf.f
  d1cqdl.f
  d1cqfe.f
  d1cqst.f
  d1defe.f
  d1defx.f
  d1edmp.f
  d1feac.f
  d1feec.f
  d1feed.f
  d1feei.f
  d1igde.f
  d1igfd.f
  d1igfi.f
  d1igle.f
  d1igli.f
  d1igsd.f
  d1igsi.f
  d1igxe.f
  d1mbad.f
  d1pjic.f
  d1pjis.f
  d1ssxt.f
  d1stac.f
  d1stec.f
  d1sted.f
  d1stei.f
  d2bfdf.f
  d2bfig.f
  d2cnee.f
  d2cnel.f
  d2cnlt.f
  d2cntj.f
  d2cqdf.f
  d2cqdl.f
  d2cqfe.f
  d2cqst.f
  d2cyig.f
  d2defe.f
  d2defx.f
  d2edmp.f
  d2egdf.f
  d2eger.f
  d2egix.f
  d2eras.f
  d2feac.f
  d2fead.f
  d2feai.f
  d2febc.f
  d2febd.f
  d2febi.f
  d2feec.f
  d2feed.f
  d2feei.f
  d2feet.f
  d2felc.f
  d2feld.f
  d2feli.f
  d2fetn.f
  d2igbf.f
  d2igcy.f
  d2igde.f
  d2igdi.f
  d2iged.f
  d2igeg.f
  d2iger.f
  d2igfc.f
  d2igfd.f
  d2igfi.f
  d2igft.f
  d2igle.f
  d2igli.f
  d2iglp.f
  d2ignt.f
  d2igrd.f
  d2igsc.f
  d2igsd.f
  d2igsi.f
  d2igts.f
  d2igwr.f
  d2igxe.f
  d2igxi.f
  d2init.f
  d2ipfd.f
  d2ipfi.f
  d2ipsd.f
  d2ipsi.f
  d2jsdf.f
  d2jsts.f
  d2lpdf.f
  d2lpeg.f
  d2lper.f
  d2lpig.f
  d2lpix.f
  d2lput.f
  d2mbad.f
  d2mdmp.f
  d2pj2d.f
  d2pj3d.f
  d2pjdc.f
  d2pjdf.f
  d2pjds.f
  d2pjic.f
  d2pjis.f
  d2pjmc.f
  d2pjms.f
  d2read.f
  d2stac.f
  d2stad.f
  d2stai.f
  d2stec.f
  d2sted.f
  d2stei.f
  d2tsdf.f
  d2tser.f
  d2tsic.f
  d2tsid.f
  d2tsig.f
  d2tsii.f
  d2tsix.f
  d2tslc.f
  d2tsld.f
  d2tsli.f
  d2tslp.f
  d2tstp.f
  d2unlc.f
  d2unld.f
  d2unli.f
  d2writ.f
  dasum.f
  daxpy.f
  dcopy.f
  ddot.f
  dgbco.f
  dgbfa.f
  dgbsl.f
  dgeco.f
  dgefa.f
  dgesl.f
  dgthr.f
  dnrm2.f
  dpbco.f
  dpbfa.f
  dpbsl.f
  dqrdc.f
  dqrsl.f
  drscl.f
  dscal.f
  dswap.f
  dt1svy.f
  dt2svy.f
  dtarln.f
  dtbsp1.f
  dtbsp2.f
  dtbspl.f
  dtcapp.f
  dtcgen.f
  dtclsp.f
  dtclxt.f
  dtcmat.f
  dtcnpr.f
  dtcnt1.f
  dtcntr.f
  dtcrbl.f
  dtcsi.f
  dtcsiz.f
  dtdclb.f
  dtdigl.f
  dtdis1.f
  dtdist.f
  dteqar.f
  dterpt.f
  dterr.f
  dterrs.f
  dterrx.f
  dtfctl.f
  dtgcs1.f
  dtgcsi.f
  dtgele.f
  dtgesl.f
  dtget.f
  dtgns1.f
  dtgnsi.f
  dtgpar.f
  dtgqnm.f
  dtgrbl.f
  dtgtp1.f
  dtgtpa.f
  dthsi.f
  dtidmx.f
  dtilc1.f
  dtilck.f
  dtjcon.f
  dtjint.f
  dtlcmb.f
  dtlcms.f
  dtlcst.f
  dtlnb.f
  dtlsa.f
  dtlsa1.f
  dtlsa2.f
  dtlsaa.f
  dtlsle.f
  dtlssl.f
  dtmcon.f
  dtmgk1.f
  dtmgkt.f
  dtmiri.f
  dtmisc.f
  dtmmps.f
  dtmp31.f
  dtmvps.f
  dtnpd1.f
  dtnpd2.f
  dtnpd3.f
  dtnpd4.f
  dtnpdr.f
  dtnpv1.f
  dtnpv2.f
  dtnpv3.f
  dtnpvl.f
  dtnsi.f
  dtosl1.f
  dtoslo.f
  dtpcut.f
  dtpcxt.f
  dtplar.f
  dtplf1.f
  dtplf2.f
  dtplft.f
  dtpln3.f
  dtplne.f
  dtprnt.f
  dtquad.f
  dtradc.f
  dtrdag.f
  dtrdca.f
  dtrdgg.f
  dtrdi1.f
  dtrdig.f
  dtrhoc.f
  dtrpst.f
  dtrpun.f
  dtschk.f
  dtscht.f
  dtscr3.f
  dtscrc.f
  dtsepp.f
  dtsepv.f
  dtsfa1.f
  dtsfar.f
  dtslin.f
  dtslne.f
  dtslxt.f
  dtsmgd.f
  dtsmtp.f
  dtsoff.f
  dtspad.f
  dtspd1.f
  dtspdr.f
  dtspjn.f
  dtsprm.f
  dtspv1.f
  dtspv2.f
  dtspv3.f
  dtspvl.f
  dtsrev.f
  dtsrfc.f
  dtsrfn.f
  dtssi.f
  dtssi1.f
  dtssi2.f
  dtssi3.f
  dtssi4.f
  dtssi5.f
  dtssi6.f
  dtssxt.f
  dtstr1.f
  dtstrm.f
  dtsut1.f
  dtsut2.f
  dtsut3.f
  dtsutl.f
  dtsze1.f
  dtsze2.f
  dtsze3.f
  dtsze4.f
  dtszer.f
  dttrot.f
  dttscl.f
  dtttrn.f
  dtupd1.f
  dtupdg.f
  dtval.f
  dtwrag.f
  dtwrca.f
  dtwri1.f
  dtwrig.f
)
target_link_libraries(dt_nurbs global)
target_include_directories(dt_nurbs PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
install(FILES README DESTINATION doc)
