cfdtools_add_library(geomlib
  angle2d.f90
  angle_between_planes.f90
  angle_between_vectors.f90
  arcs2d.f
  arcs3d.f
  area3.f
  area4.f
  areaxy.f
  beval.f
  catenary_parameters.f90
  chord.f
  chord3d.f
  chords2d.f
  chords3d.f
  chordsrf.f
  chordsrow.f
  circle_slope.f90
  cross.f
  curv2d.f
  curv3d.f
  curve_diffs.f90
  detect_flatness.f90
  detect_vertices.f90
  distptol.f
  distptop.f
  distptos.f
  gaussian_curvature.f90
  handle_flatness.f90
  nearest_brick_point.f90
  nearest_cell_point.f90
  nearest_curve_point.f90
  nearest_edge_point.f90
  nearest_edge_pt_2d.f90
  nearest_hex_point.f90
  nearest_prism_point.f90
  nearest_pyramid_point.f90
  nearest_quad_point.f90
  nearest_tet_point.f90
  nearest_tri_point.f90
  nearest_tri_pt_2d.f90
  param2d.f
  param2do.f
  paramxy.f
  paramxyz.f
  polygon3.f
  polygon4.f
  project3.f
  project4.f
  rigid_transform.f90
  rotate2.f
  rotate2d.f
  rotate3d.f
  rotate_xyz.f90
  solid_angle_quad.f90
  solid_angle_quadrature_4.f90
  surface_normal.f90
  test_angle2d.f90
  tri_normal_and_area.f90
  unitnorm.f
  unitnorm2d.f90
  vertex_curvature.f90
  xderivs.f
)
target_link_libraries(cfdtools_geomlib
  PRIVATE
    cfdtools_linsys
    cfdtools_intrinsics
    cfdtools_optlib
)
