add_library(gridlib
  adjustn.f90
  adjustn2.f90
  arbdis.f
  arcdis.f
  average_increments.f90
  blgrid.f
  catenary_grid.f90
  cellvol.f
  changen.f
  changen1d.f
  changen2d.f
  compass.f
  condis.f
  copy_face.f90
  curvdis.f
  curvdis2.f90
  curvdis3d.f
  curvdis3d2.f90
  curvdis_behavior.f90
  curvdis_l.f
  delq3d.f
  determine_grid_dim.f90
  determine_grid_form.f90
  distrib.f
  dstrib.f
  ecompass.f
  ellip2d.f
  ellip3d.f
  ellipq3d.f
  expdis.f
  expdis2.f
  expdis4.f
  expdis5.f
  fixogrid.f
  flow_gradients.f90
  flow_gradients_nf.f90
  foilgrd.f
  foilgrid.f
  geodis.f
  geodis2.f
  graddis.f
  graddis2.f90
  graddis3d.f
  graddis3d2.f90
  gridspec.f
  htdis2.f
  htdis4.f
  lapgrid.f
  min_max_curv_edge_2d.f90
  modgrid2.f
  modgrid3.f
  modgrid4.f
  morph_line_3d.f
  nuline2d.f
  nuline3d.f
  permute_block.f90
  permute_block_2d.f90
  shockgrid.f
  skew2d.f
  smooth1d.f
  smoothx.f
  stretch.f90
  tfi2d.f
  tfi3d.f
  tfint3d.f
  tfint3f.f
  tfiq3d.f
  tfiq3xyz.f
  uniform_edge.f90
  vertices_to_centers.f90
  vertices_to_centers_2d.f90
  vinokur.f
  warp2d.f
  warp3d.f
  warpq3d.f
  warpq3d2.f90
  xgrid.f
)
target_link_libraries(gridlib
  PRIVATE
    global
    intrinsics
  PUBLIC
    grid_block_structure
)
target_include_directories(gridlib PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
install(FILES README DESTINATION doc RENAME gridlib)
