add_library(grmodules
  annotate.f
  classif.f
  clipit.f
  clpwnd.f
  clrnge.f
  conscl.f
  cont2d.f
  cont3d.f
  contleg.f
  fixwindo.f
  layout.f
  lbtext.f
  legend.f
  linax.f
  logax.f
  mapfix.f
  pl2d.f
  pl3d.f
  plcleg.f
  plfree.f
  plgrid.f
  pllevs.f
  plotdev.f
  plpoly.f
  pltgeo.f
  pltytl.f
  poly3d.f
  polyline.f
  qcont.f
  sclean.f
  testclean.f
  window.f
  xdimtb.f
)
target_link_libraries(grmodules global)
