add_library(interp2d
  akima.f
  bicubmat.f
  bilin3pt.f.superseded-by-ADT
  bilinear.f
  bilint.f
  bilintp.f
  bvlsq.f
  facets.f
  hardy.f
  inmesh.f
  intsec.f.deprecated
  intsec2.f
  intsec2d.f90
  intsec2t.f
  intsec3.f
  lcsfit2d.f
  lcsint2d.f
  lint2d.f
  nearpt.f
  pbilint.f
  pbvlsq.f
  plbicube.f
  plincub.f
  plsint2d.f
  plstangent.f
  plxcut.f
  smooth2d.f
  table2.f
  tfif2d.f
  tpspln.f
)
target_link_libraries(interp2d global)
install(FILES README DESTINATION doc)
