add_library(interplib
  aebxplusc.f90
  axbecx.f90
  axbplusc.f90
  cfft.f
  cfft2.f
  circular_arc.f90
  csdval.f
  cseval.f
  csfit.f
  cspline.f90
  cubintrp.f
  fscalc.f
  fscoef.f
  fsdval.f
  fseries.f
  fseval.f
  fseval2.f
  fsfit.f
  fssum.f
  hermite.f
  inverse_parabola.f
  lcsfit.f
  lcsfit2.f90
  lcsinverse.f90
  line1d.f
  lint1d.f
  lintrp.f
  lsfit1.f
  lsfit2.f
  msfit.f
  peval2.f
  pfit2.f
  plsfit.f
  plsintrp.f
  pndval.f
  pneval.f
  pnfit.f
  pnwfit.f
  poly6.f
  pseval.f
  psfit.f
  pstval.f
  qhsfit.f
  qinterp.f
  qintrp.f
  quartic.f
  quartic2.f90
  quintic.f
  quintic2.f
  rfft2n.f
  smooth1d.f
  smooth1d_niters.f
  supereval.f90
  superfit1.f90
  superfit2.f90
  table1.f
  vecfit.f
  wagfit.f
)
target_link_libraries(interplib PRIVATE cfdtools_global intrinsics numodules searchlib)
target_include_directories(interplib PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
install(FILES README DESTINATION doc RENAME interplib)
